--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -1,9 +1,18 @@
 {% extends "base.html" %}
 {% block title %}Bomb-Paste - Home{% endblock %}
+
+{% block save_button %}
+<button class="btn btn-dark" id="saveButton" title="Save">
+    <img src="../assets/save.svg">
+</button>
+{% endblock %}
+
+{% block edit_button %}
+<button class='btn btn-dark' id="editButton" title="Clone & Edit" disabled>
+    <img src="../assets/edit.svg">
+</button>
+{% endblock %}
+
 {% block main_content %}
-<div contenteditable="true">
-    <form method="POST" id="pasteForm">
-        <div id="content"></div>
-    </form>
-</div>
+<div id="content"></div>
 {% endblock %}
