--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -41,6 +41,9 @@
         <main>
             {% block main_content %} {% endblock %}
         </main>
-        <footer class="card-footer"></footer>
+        <footer class="card-footer">
+            <a id="gh-link" href="https://github.com/Tom-the-Bomb/Bomb-paste">
+            Bomb-Paste</a>&nbsp;&nbsp;&nbsp;made by Tom-the-Bomb 💣
+        </footer>
     </body>
 </html>
