--- a/static/templates/notfound.html
+++ b/static/templates/notfound.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 {% block title %}BombPaste - 404{% endblock %}
-{% block content %}
-<div class="container">
-    <br/><h1 class="PageNotFound">404 Paste not found :(</h1><br/>
+{% block main_content %}
+<div id="not-found">
+    <h1 class="PageNotFound">
+        404 Paste not found :(
+    </h1>
+    <img src="../assets/mystery.png">
 </div>
 {% endblock %}
