--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -42,7 +42,7 @@
             {% block main_content %} {% endblock %}
         </main>
         <footer class="card-footer">
-            <a id="gh-link" href="https://github.com/Tom-the-Bomb/Bomb-paste">
+            <a id="gh-link" href="https://github.com/Tom-the-Bomb/Bomb-paste" target="_blank">
             Bomb-Paste</a>&nbsp;&nbsp;&nbsp;made by Tom-the-Bomb 💣
         </footer>
     </body>
