--- a/static/templates/notfound.html
+++ b/static/templates/notfound.html
@@ -2,9 +2,9 @@
 {% block title %}BombPaste - 404{% endblock %}
 {% block main_content %}
 <div id="not-found">
-    <h1 class="PageNotFound">
+    <h1 class="PageNotFound" id="not-found-text">
         404 Paste not found :(
-    </h1>
-    <img src="../assets/mystery.png">
+    </h1><br>
+    <img src="../assets/mystery.png" id="mystery-image">
 </div>
 {% endblock %}
