added new button

--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -26,7 +26,9 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     <div class="navbar-nav">
                         <div>
-                            {% block new_button %} {% endblock %}
+                            <button class="btn btn-dark" id="newButton" title="Create new">
+                                <img src="../assets/new.svg">
+                            </button>
                         </div>
                         <div>
                             {% block save_button %} {% endblock %}
