--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block edit_button %}
-<button class='btn btn-dark' id="editButton" title="Clone & Edit" disabled>
+<button class="btn btn-dark" id="editButton" title="Clone & Edit" disabled>
     <img src="../assets/edit.svg">
 </button>
 {% endblock %}
