--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -16,3 +16,9 @@
 {% block main_content %}
 <div id="content"></div>
 {% endblock %}
+
+{% block language_select %}
+<select class="custom-select" id="language-select">
+    <option value="volvo">Test</option>
+</select>
+{% endblock %}
