--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -59,3 +59,10 @@ footer {
 #mystery-image:hover {
     transform: scale(1.3);
 }
+
+#language-select {
+    background-color: rgb(80, 80, 90);
+    color: white;
+    outline: none!important;
+    border: none!important;
+}
