--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
 
 :root {
     --bgcolor: rgb(70, 70, 84);
@@ -66,6 +67,7 @@ footer {
     color: white;
     outline: none!important;
     border: none!important;
+    font-family: "Source Sans Pro", "monospace", "sans-serif";
 }
 
 #nav-right-element {
