--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -2,13 +2,13 @@
 {% block title %}Bomb-Paste - Home{% endblock %}
 
 {% block save_button %}
-<button class="btn btn-dark" id="saveButton" title="Save">
+<button data-toggle="tooltip" class="btn btn-dark" id="saveButton" title="Save (Ctrl+S)">
     <img src="../assets/save.svg">
 </button>
 {% endblock %}
 
 {% block edit_button %}
-<button class="btn btn-dark" id="editButton" title="Clone & Edit" disabled>
+<button data-toggle="tooltip" class="btn btn-dark" id="editButton" title="Clone & Edit" disabled>
     <img src="../assets/edit.svg">
 </button>
 {% endblock %}
