add copy-link button

--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -42,8 +42,11 @@
                         <div>
                             {% block save_button %} {% endblock %}
                         </div>
-                        <div id="nav-right-element">
+                        <div>
                             {% block edit_button %} {% endblock %}
+                        </div>
+                        <div id="nav-right-element">
+                            {% block copy_button %} {% endblock %}
                         </div>
                         <div>
                             {% block language_select %}
