--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -13,6 +13,12 @@
 </button>
 {% endblock %}
 
+{% block copy_button %}
+<button class="btn btn-dark" id="copyButton" data-toggle="tooltip" title="Copy link to clipboard" disabled>
+    <img src="../assets/copy.svg">
+</button>
+{% endblock %}
+
 {% block main_content %}
 <div id="content"></div>
 {% endblock %}
