--- a/static/templates/view_paste.html
+++ b/static/templates/view_paste.html
@@ -13,6 +13,12 @@
 </button>
 {% endblock %}
 
+{% block copy_button %}
+<button class="btn btn-dark" id="copyButton" data-toggle="tooltip" title="Copy link to clipboard">
+    <img src="../assets/copy.svg">
+</button>
+{% endblock %}
+
 {% block main_content %}
 <div id="content" contenteditable="false">{{ paste_content }}</div>
 {% endblock %}
