--- a/static/templates/help.html
+++ b/static/templates/help.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}BombPaste - 404{% endblock %}
+{% block title %}BombPaste - Help{% endblock %}
 {% block main_content %}
 <!-- TODO -->
 {% endblock %}
