--- a/static/templates/notfound.html
+++ b/static/templates/notfound.html
@@ -9,5 +9,10 @@
 </div>
 {% endblock %}
 
+{% block additional_meta %}
+<meta name="description" content="404 - Paste not found">
+<meta property="og:image" content="../assets/mystery.png">
+{% endblock %}
+
 {% block language_select %}
 {% endblock %}
