--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -14,6 +14,10 @@ footer {
     font-family: var(--fonts);
 }
 
+.useful-link {
+    color:rgb(115, 165, 212)
+}
+
 #content {
     display: flex;
     font-family: var(--fonts);
@@ -72,4 +76,23 @@ footer {
 
 #nav-right-element {
     margin-right: 2vh!important;
+}
+
+#help-main-content {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--bgcolor);
+    justify-content: center!important;
+}
+
+#help-table {
+    width: 70vw;
+    margin-top: 10vh;
+    color: rgb(226, 224, 247);
+    border-color: rgb(167, 157, 157)!important;
+}
+
+#help-table th, td {
+    border-color: rgb(170, 170, 194)!important;
 }
