--- a/static/templates/help.html
+++ b/static/templates/help.html
@@ -59,7 +59,7 @@
                     </li>
                     <li>
                         Found a bug? Make an <a class="useful-link" href="https://github.com/Tom-the-Bomb/Bomb-paste/issues/new" target="_blank">
-                            issue</a> PRs also are all welcome!
+                            issue!</a> PRs also are all welcome!
                     </li>
                     <li>
                         <a class="useful-link" href="https://github.com/Tom-the-Bomb" target="_blank">
