--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -87,12 +87,12 @@ footer {
     width: 100%;
     height: 100vh;
     background-color: var(--bgcolor);
-    justify-content: center!important;
+    justify-content: center;
+    align-items: center;
 }
 
 #help-table {
     width: 70vw;
-    margin-top: 10vh;
     color: rgb(226, 224, 247);
     border-color: rgb(167, 157, 157)!important;
 }
