--- a/static/templates/help.html
+++ b/static/templates/help.html
@@ -60,7 +60,7 @@
                 <b>Limits:</b>&nbsp;&nbsp;<code>content</code> length must be between
                 <code>{{ min_content_length }}</code> and <code>{{ max_content_length }}</code> characters.<br>
                 <b>Example Response:</b>&nbsp;&nbsp;<code>{"id": "gEDjNieoN3LsFCWTJIEc"}</code><br>
-                <b>Example Payload:</b>
+                <b>Example Request:</b>
                 <pre style="color: rgb(189, 178, 178)"><code>
 GET /upload
 Content-Type: application/json
