--- a/static/templates/help.html
+++ b/static/templates/help.html
@@ -52,17 +52,18 @@
                 <b>API Usage</b>
             </th>
             <td>
-                <h5><code><b>GET</b> /upload</code></h5><br>
+                <h5><code><b>POST</b> /upload</code></h5><br>
                 Simply uploads a paste,
-                accepts JSON with a content field specifying the paste content
-                and returns JSON with an id field specifying the paste ID.
+                accepts JSON payload data with a content field specifying the paste content
+                and returns JSON response with an id field specifying the paste ID.
                 The <u>save</u> button also just calls this endpoint internally.<br><br>
                 <b>Limits:</b>&nbsp;&nbsp;<code>content</code> length must be between
-                <code>{{ min_content_length }}</code> and <code>{{ max_content_length }}</code> characters.<br>
+                <code>{{ min_content_length }}</code> and <code>{{ max_content_length }}</code> characters
+                & <b>Max</b> <code>{{ max_upload_rate }}</code> reqs per <code>{{ max_upload_per }}s</code><br>
                 <b>Example Response:</b>&nbsp;&nbsp;<code>{"id": "gEDjNieoN3LsFCWTJIEc"}</code><br>
                 <b>Example Request:</b>
-                <pre style="color: rgb(189, 178, 178)"><code>
-GET /upload
+                <pre id="api-example"><code>
+POST /upload
 Content-Type: application/json
 body: {
     "content": "print('hello world')"
