fixed og:image and help style

--- a/static/templates/help.html
+++ b/static/templates/help.html
@@ -62,7 +62,7 @@
                 & <b>Max</b> <code>{{ max_upload_rate }}</code> reqs per <code>{{ max_upload_per }}s</code><br>
                 <b>Example Response:</b>&nbsp;&nbsp;<code>{"id": "gEDjNieoN3LsFCWTJIEc"}</code><br>
                 <b>Example Request:</b>
-                <pre id="api-example"><code>
+                <pre style="color: rgb(189, 178, 178)!important;"><code>
 POST /upload
 Content-Type: application/json
 body: {
@@ -101,7 +101,7 @@ body: {
 
 {% block additional_meta %}
 <meta name="description" content="Bomb-Paste - Help">
-<meta property="og:image" content="../assets/rooLurk.png">
+<meta property="og:image" content="https://raw.githubusercontent.com/Tom-the-Bomb/Bomb-paste/master/static/assets/rooLurk.png">
 {% endblock %}
 
 {% block language_select %}
