--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block additional_meta %}
 <meta name="description" content="Bomb-Paste - Home">
-<meta property="og:image" content="../assets/rooSee.png">
+<meta property="og:image" content="https://raw.githubusercontent.com/Tom-the-Bomb/Bomb-paste/master/static/assets/rooSee.png">
 {% endblock %}
 
 {% block save_button %}
