--- a/static/templates/notfound.html
+++ b/static/templates/notfound.html
@@ -11,7 +11,7 @@
 
 {% block additional_meta %}
 <meta name="description" content="404 - Paste not found">
-<meta property="og:image" content="../assets/mystery.png">
+<meta property="og:image" content="https://raw.githubusercontent.com/Tom-the-Bomb/Bomb-paste/master/static/assets/mystery.png">
 {% endblock %}
 
 {% block language_select %}
