--- a/static/templates/help.html
+++ b/static/templates/help.html
@@ -100,7 +100,7 @@ body: {
 {% endblock %}
 
 {% block additional_meta %}
-<meta name="description" content="Bomb-Paste - Help">
+<meta name="description" content="Bomb-Paste help desk">
 <meta property="og:image" content="https://raw.githubusercontent.com/Tom-the-Bomb/Bomb-paste/master/static/assets/rooLurk.png">
 {% endblock %}
 
