--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}Bomb-Paste - Home{% endblock %}
 
 {% block additional_meta %}
-<meta name="description" content="Bomb-Paste - Home">
+<meta name="description" content="Bomb-Paste home page">
 <meta property="og:image" content="https://raw.githubusercontent.com/Tom-the-Bomb/Bomb-paste/master/static/assets/rooSee.png">
 {% endblock %}
 
