--- a/static/templates/notfound.html
+++ b/static/templates/notfound.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block additional_meta %}
-<meta name="description" content="404 - Paste not found">
+<meta name="description" content="404 Paste not found :(">
 <meta property="og:image" content="https://raw.githubusercontent.com/Tom-the-Bomb/Bomb-paste/master/static/assets/mystery.png">
 {% endblock %}
 
