--- a/static/templates/notfound.html
+++ b/static/templates/notfound.html
@@ -3,8 +3,9 @@
 {% block main_content %}
 <div id="not-found">
     <h1 class="PageNotFound" id="not-found-text">
-        404 Paste not found :(
-    </h1><br>
+        <span style="color: rgb(197, 147, 147)">404</span>
+        Paste not found :(
+    </h1><br><br>
     <img src="../assets/mystery.png" id="mystery-image">
 </div>
 {% endblock %}
