--- a/static/templates/help.html
+++ b/static/templates/help.html
@@ -26,7 +26,8 @@
                 <br><br>
                 <b>💡 Note:</b> You can also modify the url yourself directly to change the
                 language of the paste (for sharing) e.g. <code>/:paste_id.js</code>,
-                or use the language select menu.
+                or use the language select menu when editing or viewing.
+                If not set at all, it will try to autodetect the language of the code and use that (may not be as accurate)
             </td>
         </tr>
         <tr>
