--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -14,6 +14,7 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.1.0/highlight.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.5.3/ace.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.5.3/ext-language_tools.js"></script>
         <script src="../js/languages.js"></script>
         <script defer src="../js/index.js"></script>
 
