--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -25,7 +25,9 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Bomb Paste</a>
+                    <a class="navbar-brand" href="#" style="color: rgb(230, 205, 205)!important;">
+                        Bomb Paste
+                    </a>
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
                     <span class="navbar-toggler-icon"></span>
