use absolute over relative paths

--- a/static/templates/help.html
+++ b/static/templates/help.html
@@ -5,19 +5,19 @@
     <table class="table table-responsive" id="help-table">
         <tr>
             <th scope="row">
-                <img src="../assets/question.svg">
+                <img src="/assets/question.svg">
             </th>
             <td><b>Help button</b> - redirects the user to this page, which shows help information.</td>
         </tr>
         <tr>
             <th scope="row">
-                <img src="../assets/new.svg">
+                <img src="/assets/new.svg">
             </th>
             <td><b>New button</b> - redirects the user to the root (index) page, allowing for them to create a new paste</td>
         </tr>
         <tr>
             <th scope="row">
-                <img src="../assets/save.svg">
+                <img src="/assets/save.svg">
             </th>
             <td><b>Save button</b> - Saves the current actively edited paste
                 redirects them to <code>/:paste_id.&lt;language&gt;</code>
@@ -32,7 +32,7 @@
         </tr>
         <tr>
             <th scope="row">
-                <img src="../assets/edit.svg">
+                <img src="/assets/edit.svg">
             </th>
             <td><b>Clone & Edit button</b> - Pastes are not editable once saved
                 this button simply redirects the user to root allowing them to make a new paste
@@ -42,7 +42,7 @@
         </tr>
         <tr>
             <th scope="row">
-                <img src="../assets/copy.svg">
+                <img src="/assets/copy.svg">
             </th>
             <td><b>Copy Button</b> - Copies the URL of the current Paste to clipboard
                 simply for ease of sharing. (Only enabled when the user is viewing a paste)
