--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -8,19 +8,19 @@
 
 {% block save_button %}
 <button data-toggle="tooltip" class="btn btn-dark" id="saveButton" title="Save (Ctrl+S)">
-    <img src="../assets/save.svg">
+    <img src="/assets/save.svg">
 </button>
 {% endblock %}
 
 {% block edit_button %}
 <button data-toggle="tooltip" class="btn btn-dark" id="editButton" title="Clone & Edit" disabled>
-    <img src="../assets/edit.svg">
+    <img src="/assets/edit.svg">
 </button>
 {% endblock %}
 
 {% block copy_button %}
 <button class="btn btn-dark" id="copyButton" data-toggle="tooltip" title="Copy link to clipboard" disabled>
-    <img src="../assets/copy.svg">
+    <img src="/assets/copy.svg">
 </button>
 {% endblock %}
 
