--- a/static/templates/internalerror.html
+++ b/static/templates/internalerror.html
@@ -10,7 +10,7 @@
         Please make an issue over
         <a class="useful-link" href="https://github.com/Tom-the-Bomb/Bomb-paste/issues/new" target="_blank">here</a> 🙏
     </p><br><br>
-    <img src="../assets/rooBulli.png" id="mystery-image">
+    <img src="/assets/rooBulli.png" id="mystery-image">
 </div>
 {% endblock %}
 
