--- a/static/templates/notfound.html
+++ b/static/templates/notfound.html
@@ -6,7 +6,7 @@
         <span style="color: rgb(197, 147, 147)">404</span>
         Paste not found :(
     </h1><br><br>
-    <img src="../assets/mystery.png" id="mystery-image">
+    <img src="/assets/mystery.png" id="mystery-image">
 </div>
 {% endblock %}
 
