--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -5,18 +5,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Bomb-Paste{% endblock %}</title>
-        <link rel="icon" href="../assets/rooSee.png" type="image/x-icon">
+        <link rel="icon" href="/assets/rooSee.png" type="image/x-icon">
         {% block additional_meta %} {% endblock %}
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.1.0/styles/default.min.css">
-        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="/css/styles.css">
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.1.0/highlight.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.5.3/ace.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.5.3/ext-language_tools.js"></script>
-        <script src="../js/languages.js"></script>
-        <script defer src="../js/index.js"></script>
+        <script src="/js/languages.js"></script>
+        <script defer src="/js/index.js"></script>
 
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
@@ -36,12 +36,12 @@
                     <div class="navbar-nav">
                         <div>
                             <button class="btn btn-dark" id="helpButton" data-toggle="tooltip" title="Help">
-                                <img src="../assets/question.svg">
+                                <img src="/assets/question.svg">
                             </button>
                         </div>
                         <div>
                             <button class="btn btn-dark" id="newButton" data-toggle="tooltip" title="Create new">
-                                <img src="../assets/new.svg">
+                                <img src="/assets/new.svg">
                             </button>
                         </div>
                         <div>
