--- a/static/templates/view_paste.html
+++ b/static/templates/view_paste.html
@@ -3,19 +3,19 @@
 
 {% block save_button %}
 <button data-toggle="tooltip" class="btn btn-dark" id="saveButton" title="Save (Ctrl+S)" disabled>
-    <img src="../assets/save.svg">
+    <img src="/assets/save.svg">
 </button>
 {% endblock %}
 
 {% block edit_button %}
 <button data-toggle="tooltip" class='btn btn-dark' id="editButton" title="Clone & Edit">
-    <img src="../assets/edit.svg">
+    <img src="/assets/edit.svg">
 </button>
 {% endblock %}
 
 {% block copy_button %}
 <button class="btn btn-dark" id="copyButton" data-toggle="tooltip" title="Copy link to clipboard">
-    <img src="../assets/copy.svg">
+    <img src="/assets/copy.svg">
 </button>
 {% endblock %}
 
